[gd_scene load_steps=15 format=2]

[ext_resource path="res://Common/Res/Tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Common/Res/Map/TutMap.gd" type="Script" id=2]
[ext_resource path="res://Common/Res/Themes/DefaultTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Clock.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fire.png" type="Texture" id=5]
[ext_resource path="res://Common/Res/Fonts/PMarker_64_W.tres" type="DynamicFont" id=6]
[ext_resource path="res://Common/Res/Fonts/PMarker_16_W.tres" type="DynamicFont" id=7]
[ext_resource path="res://Common/Res/Map/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://Assets/Arrow.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 5 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Tutorial" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 2, 1, 1, 2, 196610, 2, 2, 196610, 3, 2, 196610, 4, 2, 196610, 5, 2, 3, 65536, 2, 65536, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 2, 65536, 131072, 2, 65536, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 2, 65536, 196608, 2, 65536, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 2, 65536, 262144, 2, 65536, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 2, 65536, 327680, 2, 131073, 327681, 2, 196610, 327682, 2, 196610, 327683, 2, 196610, 327684, 2, 196610, 327685, 2, 131075 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 96, 96 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CC" type="CenterContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -141.0
margin_top = -6.0
margin_right = -141.0
margin_bottom = -6.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Placing" type="Label" parent="CanvasLayer/CC"]
visible = false
margin_left = 577.0
margin_top = 404.0
margin_right = 1022.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 6 )
text = "Placing Phase"

[node name="Movement" type="Label" parent="CanvasLayer/CC"]
visible = false
margin_left = 541.0
margin_top = 404.0
margin_right = 1058.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 6 )
text = "Movement Phase"

[node name="AITurn" type="Label" parent="CanvasLayer/CC"]
visible = false
margin_left = 541.0
margin_top = 404.0
margin_right = 1059.0
margin_bottom = 496.0
custom_fonts/font = ExtResource( 6 )
text = "Computer's Turn"

[node name="Turn" type="Label" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -120.0
margin_right = -57.0
margin_bottom = -73.0
theme = ExtResource( 3 )
text = "Turn: 1"

[node name="CountDown" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -263.0
margin_top = -119.0
margin_right = 263.0
margin_bottom = -72.0
theme = ExtResource( 3 )
text = "10 Turns Until FireFighters Arive"

[node name="Clock" type="TextureRect" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -176.0
margin_top = -264.0
margin_right = -48.0
margin_bottom = -136.0
texture = ExtResource( 4 )

[node name="NextPhaseBtn" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -69.0
margin_right = -16.0
margin_bottom = -16.0
theme = ExtResource( 3 )
text = "Next Phase"

[node name="Placeable" type="Panel" parent="CanvasLayer"]
margin_right = 144.0
margin_bottom = 64.0
rect_min_size = Vector2( 144, 64 )
theme = ExtResource( 3 )

[node name="Sprite" type="AnimatedSprite" parent="CanvasLayer/Placeable"]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
playing = true

[node name="Amount" type="Label" parent="CanvasLayer/Placeable"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -94.0
text = "0"
align = 1
valign = 1

[node name="Tutorial" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="ColorRect" parent="CanvasLayer/Tutorial"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.192157, 0.192157, 0.192157, 0.486275 )
__meta__ = {
"_edit_lock_": true
}

[node name="ResPannel" type="Panel" parent="CanvasLayer/Tutorial"]
visible = false
margin_left = 144.0
margin_top = 125.0
margin_right = 611.0
margin_bottom = 291.0

[node name="ResLabel" type="RichTextLabel" parent="CanvasLayer/Tutorial/ResPannel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_bottom = 5.0
custom_fonts/normal_font = ExtResource( 7 )
text = "At the start of your turn you will get more fire that you can place durring the placment phase.
The amount you get diminishes over time and is determined by how many tiles you have.
If your income reaches zero you will lose the level"

[node name="ResNextBtn" type="Button" parent="CanvasLayer/Tutorial/ResPannel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -38.0
margin_right = -16.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 7 )
text = "Next"

[node name="Arrow" type="TextureRect" parent="CanvasLayer/Tutorial/ResPannel"]
margin_left = -96.0
margin_top = -48.0
margin_right = -80.0
margin_bottom = -10.0
rect_rotation = -29.4545
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="FireTilePanel" type="Panel" parent="CanvasLayer/Tutorial"]
visible = false
margin_left = 211.0
margin_top = 383.0
margin_right = 606.0
margin_bottom = 568.0

[node name="Arrow" type="TextureRect" parent="CanvasLayer/Tutorial/FireTilePanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 73.0
margin_top = -112.0
margin_right = 89.0
margin_bottom = -74.0
rect_rotation = 34.8982
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Tutorial/FireTilePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -44.0
custom_fonts/normal_font = ExtResource( 7 )
text = "When a tile has more than one unit it can be moved to a ajecent tile or another fire tile that is connected
It can also be used to evaporate water tiles.
Fill of the tile tiles with fire to win."

[node name="FireTilleNextBtn" type="Button" parent="CanvasLayer/Tutorial/FireTilePanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -38.0
margin_right = -16.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 7 )
text = "Next"

[node name="WinLose" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/WinLose"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.231373, 0.231373, 0.231373, 0.282353 )

[node name="CC" type="CenterContainer" parent="CanvasLayer/WinLose"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="WinC" type="Control" parent="CanvasLayer/WinLose/CC"]
visible = false
margin_left = 800.0
margin_top = 450.0
margin_right = 800.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="CanvasLayer/WinLose/CC/WinC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.0
margin_top = -302.0
margin_right = 487.0
margin_bottom = -210.0
custom_fonts/font = ExtResource( 6 )
text = "The flames comsumed the house"
align = 1
valign = 1

[node name="WinInfo" type="Label" parent="CanvasLayer/WinLose/CC/WinC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -369.0
margin_top = -135.5
margin_right = 369.0
margin_bottom = -88.5
text = "Within 8 turns"
align = 1
valign = 1

[node name="BackToMenuBtn" type="Button" parent="CanvasLayer/WinLose/CC/WinC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -186.5
margin_top = -26.5
margin_right = 186.5
margin_bottom = 26.5
text = "Return to level Select"

[node name="LoseC" type="Control" parent="CanvasLayer/WinLose/CC"]
visible = false
margin_left = 800.0
margin_top = 450.0
margin_right = 800.0
margin_bottom = 450.0

[node name="Label" type="Label" parent="CanvasLayer/WinLose/CC/LoseC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -722.0
margin_top = -358.0
margin_right = 722.0
margin_bottom = -154.0
custom_fonts/font = ExtResource( 6 )
text = "The fire failed to burn down the house"
align = 1
valign = 1

[node name="BackToMenuBtn" type="Button" parent="CanvasLayer/WinLose/CC/LoseC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -26.5
margin_right = 188.0
margin_bottom = 26.5
text = "Return to Level Select"

[node name="PlacingTimer" type="Timer" parent="."]
wait_time = 1.25

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 1.25

[connection signal="pressed" from="CanvasLayer/Tutorial/ResPannel/ResNextBtn" to="CanvasLayer/Tutorial" method="_on_ResNextBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/Tutorial/FireTilePanel/FireTilleNextBtn" to="CanvasLayer/Tutorial" method="_on_FireTilleNextBtn_pressed"]
